# TIMatrix

./: CMakeLists.txt  README.md  TIIndex.h  TIMatrix.h  library.h
lib/: Slices.h  TIIndex.h  TIMatrix.h
tests/: main.cpp
